--- a/Makefile.flags
+++ b/Makefile.flags
@@ -147,7 +147,7 @@ export SYSROOT=$(CONFIG_SYSROOT)
 endif
 
 # libm may be needed for dc, awk, ntpd
-LDLIBS += m
+#LDLIBS += m
 # Android has no separate crypt library
 # gcc-4.2.1 fails if we try to feed C source on stdin:
 #  echo 'int main(void){return 0;}' | $(CC) $(CFLAGS) -lcrypt -o /dev/null -xc -
